[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Shaders/outline.shader" type="Shader" id=1]
[ext_resource path="res://src/fire/Torch.gd" type="Script" id=2]
[ext_resource path="res://assets/Tiles/torch.png" type="Texture" id=3]
[ext_resource path="res://src/fire/CircleTreeDetector.gd" type="Script" id=4]
[ext_resource path="res://src/effects/FireEffect.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/delegates/Interactable.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 0.5, 2, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "landed_on_the_ground"
} ]
}

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/light.png-b4bfd8d5e94c7cc29e5a179990b93667.stex"

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/enabled = true
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 1.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[node name="Torch" instance=ExtResource( 6 )]
script = ExtResource( 2 )

[node name="ClickShape" type="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="PlayerDetector" parent="." index="1"]
visible = false

[node name="TreeDetector" type="Area2D" parent="." index="2"]
visible = false
position = Vector2( 0, 12 )
collision_layer = 0
collision_mask = 512
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeDetector" index="0"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="." index="3"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
anims/ThrowTorchAway = SubResource( 3 )

[node name="Visuals" type="Node2D" parent="." index="5"]

[node name="Light2D" type="Light2D" parent="Visuals" index="0"]
visible = false
texture = SubResource( 4 )
texture_scale = 0.5
color = Color( 0.843137, 0.0117647, 0.988235, 1 )
energy = 0.05

[node name="Sprite" type="Sprite" parent="Visuals" index="1"]
material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="FireEffect" parent="Visuals" index="2" instance=ExtResource( 5 )]

[connection signal="clicked" from="." to="." method="_on_Torch_clicked"]
[connection signal="state_changed" from="." to="." method="_on_Torch_state_changed"]
[connection signal="area_entered" from="TreeDetector" to="TreeDetector" method="_on_TreeDetector_area_entered"]
[connection signal="area_exited" from="TreeDetector" to="TreeDetector" method="_on_TreeDetector_area_exited"]
